Mudança de ordem e organização de divs, melhorando o visual

--- a/index.html
+++ b/index.html
@@ -57,27 +57,29 @@
         </ul>
     </div>
 
-    <h1 style="margin-left: 14%;">Notícias</h1> <hr>
+    
 
     <div class="row">
         <div class="card green">
-          <h2>Monetização</h2>
-          <p>Configure a monetização</p>
+          <h2>Vestibulinho</h2>
+          <p>Matricule-se em no Centro Paula Souza</p>
           <img class="image" src="money.png" alt="money" />
         </div>
    
         <div class="card blue">
-          <h2>Configurações</h2>
-          <p>Configure o seu sistema</p>
+          <h2>Cursos</h2>
+          <p>Veja os cursos disponíveis em nossa Etec</p>
           <img class="image" src="settings.png" alt="settings" />
         </div>
    
         <div class="card red">
-          <h2>Artigos</h2>
-          <p>Crie e edite artigos</p>
+          <h2>Agenda</h2>
+          <p>Veja nossas programações</p>
           <img class="image" src="article.png" alt="article" />
         </div>
       </div>
+
+      <h1 style="margin-left: 15%;">Notícias</h1> <hr>
 
     <div id="conteudoTotal">
 
