--- a/index.html
+++ b/index.html
@@ -62,20 +62,20 @@
     <div class="row">
         <div class="card green">
           <h2>Vestibulinho</h2>
-          <p>Matricule-se em no Centro Paula Souza</p>
-          <img class="image" src="money.png" alt="money" />
+          <p>Datas e matricula</p>
+          <img class="image" src="/img/card/matricular.png" />
         </div>
    
         <div class="card blue">
           <h2>Cursos</h2>
-          <p>Veja os cursos disponíveis em nossa Etec</p>
-          <img class="image" src="settings.png" alt="settings" />
+          <p>Veja os cursos disponíveis</p>
+          <img class="image" src="/img/card/curso.png"/>
         </div>
    
         <div class="card red">
           <h2>Agenda</h2>
-          <p>Veja nossas programações</p>
-          <img class="image" src="article.png" alt="article" />
+          <p>Nossas programações</p>
+          <img class="image" src="/img/card/calendario.png"/>
         </div>
       </div>
 
